Google Auth Added, Cleaning up the website and getting it back to where it was before I re-created the website

--- a/Comp2048-Assignment-Andreas1141007/appsettings.json
+++ b/Comp2048-Assignment-Andreas1141007/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "1067802469396-mh9l4gv9j8njmrlopvbrdukissj8i7gm.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  }
 }
