--- a/Comp2048-Assignment-Andreas1141007-Test/Comp2048-Assignment-Andreas1141007-Test.csproj
+++ b/Comp2048-Assignment-Andreas1141007-Test/Comp2048-Assignment-Andreas1141007-Test.csproj
@@ -8,10 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Comp2048-Assignment-Andreas1141007\Comp2048_Assignment_Andreas1141007.csproj" />
   </ItemGroup>
 
 </Project>
